@@ -1,5 +1,7 @@
 Changelog for mk-slave-prefetch:
 
+   * Made --secondary-indexes use --database db if necessary (issue 998).
+
 2010-04-01: version 1.0.16
 
    * --secondary-indexes did not work (issue 932).
